<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <POU Name="OP130_RH_Initialization_Seq" Id="{0590351b-9308-461f-98bc-e3f7869fe039}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM OP130_RH_Initialization_Seq
VAR
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[



CASE OP130_RH_Homing_Seq OF 
	
       	0: IF (OP130_Auto AND NOT OP130_HomeRunning AND  NOT OP130_ErrorActive AND  NOT OP130_AutoRunning AND NOT OP130_StepRunning	 AND NOT OP130_Temp_Home_OK) THEN
       		  OP130_HomeRunning:=TRUE;
       		  OP130_RH_Homing_Seq:=10;	
       	   END_IF
	   
	    10:IF SR130_stManualModeAxis_RH_Vert_Servo.actualPosition >=61  THEN
		      OP130_RH_Homing_Seq:=20;
	        ELSE
		      OP130_RH_Homing_Seq:=90;
		    END_IF
	   
	   20: IF (OP130_HomeRunning AND OP130_HMI_Homing)THEN 
		     // OP130_GVL.SR130_RH_Vert_Servo.fTargetPosition:=SR130_HMI_Servo_CylWork_Position;
		    // OP130_GVL.SR130_RH_Vert_Servo.fTargetVelocity:=SR130_HMI_Servo_CylWork_Velocity;
		      SR130_RH_Servo_Control.Position:=SR130_HMI_Servo_CylWork_Position;
			  SR130_RH_Servo_Control.Velocity:=SR130_HMI_Servo_CylWork_Velocity;
		      OP130_RH_Homing_Seq:=30;
	       END_IF
	   
	   30: IF (OP130_HomeRunning AND OP130_HMI_Homing)THEN 
		   //  SR130_RH_Abs_Move_Start:=TRUE;
			 SR130_RH_Servo_Control.ABSmove_Start:=TRUE;
			 OP130_RH_Homing_Seq:=40;
	       END_IF
		   
	   40:IF (OP130_HomeRunning AND OP130_HMI_Homing)THEN 
		     IF OP130_GVL.SR130_RH_Servo_Control.Axis_In_Pos THEN
			// SR130_RH_Abs_Move_Start:=FALSE;
			    SR130_RH_Servo_Control.ABSmove_Start:=FALSE;
			    OP130_RH_Homing_Seq:=50;
		     END_IF
	      END_IF
		  
	   50:IF (OP130_HomeRunning AND OP130_HMI_Homing)THEN 
		   IF CR130_RH_Rot_Cyl.Position2 THEN
			   OP130_RH_Homing_Seq:=60; 
		    ELSE
		      OP130_GVL.CR130_RH_Rot_Cyl.HomingCmd2:= TRUE;
		      OP130_GVL.CR130_RH_Rot_Cyl.HomingCmd1:= FALSE;
	       END_IF
	   END_IF
	   
	   60:IF (OP130_HomeRunning AND OP130_HMI_Homing)THEN 
		    //OP130_GVL.SR130_RH_Vert_Servo.fTargetPosition:=SR130_HMI_Servo_Rotation_Position;
		    //OP130_GVL.SR130_RH_Vert_Servo.fTargetVelocity:=SR130_HMI_Servo_Rotation_Velocity;
		     SR130_RH_Servo_Control.Position:=SR130_HMI_Servo_Rotation_Position;
		     SR130_RH_Servo_Control.Velocity:=SR130_HMI_Servo_Rotation_Velocity;
		     OP130_RH_Homing_Seq:=70;
	      END_IF
	   
	   70: IF (OP130_HomeRunning AND OP130_HMI_Homing)THEN 
		     //SR130_RH_Abs_Move_Start:=TRUE;
			   SR130_RH_Servo_Control.ABSmove_Start:=TRUE;
			   IF  OP130_GVL.SR130_RH_Servo_Control.Axis_In_Pos THEN
				 // SR130_RH_Abs_Move_Start:=FALSE;
				  SR130_RH_Servo_Control.ABSmove_Start:=FALSE;
				  OP130_RH_Homing_Seq:=80;
			   END_IF
	       END_IF
		   
	80:IF (OP130_HomeRunning AND OP130_HMI_Homing)THEN 
		  IF OP130_GVL.CR130_RH_Rot_Cyl.Position1 THEN
			OP130_RH_Homing_Seq:=90;
		  ELSE
				OP130_GVL.CR130_RH_Rot_Cyl.HomingCmd1:= TRUE;
				OP130_GVL.CR130_RH_Rot_Cyl.HomingCmd2:= FALSE;
		  END_IF
	   END_IF
	
	90:IF (OP130_HomeRunning AND OP130_HMI_Homing)THEN  
		//  OP130_GVL.SR130_RH_Vert_Servo.fTargetPosition:=0.0;
		//  OP130_GVL.SR130_RH_Vert_Servo.fTargetVelocity:=10;
		  SR130_RH_Servo_Control.Position :=0.0;
		  SR130_RH_Servo_Control.Velocity :=10;
		  OP130_RH_Homing_Seq:=100;
	   END_IF
	
	100:IF (OP130_HomeRunning AND OP130_HMI_Homing)THEN 
           SR130_RH_Abs_Move_Start:=TRUE;
	       SR130_RH_Servo_Control.ABSmove_Start:=TRUE;
			IF SR130_RH_Servo_Control.Axis_In_Pos THEN
			//   SR130_RH_Abs_Move_Start:=FALSE;
			   SR130_RH_Servo_Control.ABSmove_Start:=FALSE;
			   OP130_RH_Homing_Seq:=110;
			END_IF
		END_IF
		
	110: 
		OP130_HomeRunning:=FALSE;
		OP130_RH_Homing_Seq:=0;
	
END_CASE]]></ST>
    </Implementation>
    <LineIds Name="OP130_RH_Initialization_Seq">
      <LineId Id="3" Count="4" />
      <LineId Id="101" Count="0" />
      <LineId Id="8" Count="3" />
      <LineId Id="91" Count="0" />
      <LineId Id="12" Count="0" />
      <LineId Id="14" Count="7" />
      <LineId Id="85" Count="0" />
      <LineId Id="92" Count="0" />
      <LineId Id="22" Count="1" />
      <LineId Id="90" Count="0" />
      <LineId Id="24" Count="1" />
      <LineId Id="96" Count="0" />
      <LineId Id="26" Count="1" />
      <LineId Id="102" Count="0" />
      <LineId Id="28" Count="2" />
      <LineId Id="97" Count="0" />
      <LineId Id="31" Count="2" />
      <LineId Id="103" Count="0" />
      <LineId Id="34" Count="7" />
      <LineId Id="104" Count="0" />
      <LineId Id="42" Count="2" />
      <LineId Id="86" Count="1" />
      <LineId Id="45" Count="1" />
      <LineId Id="93" Count="0" />
      <LineId Id="47" Count="4" />
      <LineId Id="98" Count="0" />
      <LineId Id="52" Count="2" />
      <LineId Id="105" Count="0" />
      <LineId Id="55" Count="5" />
      <LineId Id="63" Count="0" />
      <LineId Id="65" Count="0" />
      <LineId Id="95" Count="0" />
      <LineId Id="66" Count="2" />
      <LineId Id="88" Count="1" />
      <LineId Id="69" Count="1" />
      <LineId Id="94" Count="0" />
      <LineId Id="71" Count="1" />
      <LineId Id="99" Count="0" />
      <LineId Id="73" Count="1" />
      <LineId Id="100" Count="0" />
      <LineId Id="75" Count="2" />
      <LineId Id="106" Count="0" />
      <LineId Id="78" Count="3" />
      <LineId Id="2" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>